force-app/main/default/objects/Site_Decommission__c/fields/T_A4881_RAN_Logical_Discon_Macro_Finish__c.field-meta.xml
<CustomField>
    <fullName>T_A4881_RAN_Logical_Discon_Macro_Finish__c</fullName>
    <inlineHelpText>T: (A 4881) RAN Logical Disconnect (Macro)-Finish from Sprint Vision</inlineHelpText>
    <label>T:(A4881)RAN Logical Discon Macro-Finish</label>
    <type>Date</type>
</CustomField>