force-app/main/default/objects/Site_Decommission__c/fields/T_A_4750_Closeout_Doc_Start__c.field-meta.xml
<CustomField>
    <fullName>T_A_4750_Closeout_Doc_Start__c</fullName>
    <description>T: (A 4750) Closeout Documentation Completed - Decom-Start</description>
    <inlineHelpText>T: (A 4750) Closeout Documentation Completed - Decom-Start</inlineHelpText>
    <label>T: (A 4750) Closeout Doc Start</label>
    <type>Date</type>
</CustomField>