force-app/main/default/objects/Site_Decommission__c/fields/T_A_4750_Closeout_Documentation_Compl__c.field-meta.xml
<CustomField>
    <fullName>T_A_4750_Closeout_Documentation_Compl__c</fullName>
    <inlineHelpText>T: (A 4750) Closeout Documentation Completed - Decom-Finish - 54</inlineHelpText>
    <label>T: (A 4750) Closeout Doc Complete</label>
    <type>Date</type>
</CustomField>