force-app/main/default/objects/Site_Decommission__c/fields/T_A_4870_Site_Deconstruction_Complete__c.field-meta.xml
<CustomField>
    <fullName>T_A_4870_Site_Deconstruction_Complete__c</fullName>
    <inlineHelpText>T: (A 4870) Site Deconstruction Complete-Finish - 52</inlineHelpText>
    <label>T: (A 4870) Site Deconstruction Complete</label>
    <type>Date</type>
</CustomField>