force-app/main/default/objects/Site_Decommission__c/fields/Terminate_Connection_Backhaul_Logical_Di__c.field-meta.xml
<CustomField>
    <fullName>Terminate_Connection_Backhaul_Logical_Di__c</fullName>
    <inlineHelpText>Populated for Sprint sites only.
T: (A 4882) Backhaul Logical Disconnect from Sprint Vision.</inlineHelpText>
    <label>T: (A 4882) Backhaul Logical Disconnect</label>
    <type>Date</type>
</CustomField>