force-app/main/default/objects/Site_Decommission__c/fields/TName_F_Site_Deconstruction_Complete__c.field-meta.xml
<CustomField>
    <fullName>TName_F_Site_Deconstruction_Complete__c</fullName>
    <inlineHelpText>T: (F 4870) Site Deconstruction Complete Forecast -Finish</inlineHelpText>
    <label>T: (F 4870) Site Deconstruction Forecast</label>
    <type>Date</type>
</CustomField>