force-app/main/default/objects/Site_Decommission__c/fields/Utility_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Utility_Site_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Site ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Site Deconstructions</relationshipLabel>
    <relationshipName>Site_Deconstructions</relationshipName>
    <type>Lookup</type>
</CustomField>