force-app/main/default/objects/Site_Decommission__c/fields/What_Troubleshooting_Steps_Performed__c.field-meta.xml
<CustomField>
    <fullName>What_Troubleshooting_Steps_Performed__c</fullName>
    <label>What Troubleshooting Steps Performed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>