force-app/main/default/objects/Site_Decommission__c/recordTypes/National_Standard.recordType-meta.xml
<RecordType>
    <fullName>National_Standard</fullName>
    <active>true</active>
    <description>Used for all Deconstruction Records Managed by the National Team</description>
    <label>National Standard</label>
</RecordType>