force-app/main/default/objects/Site_Decommission__c/recordTypes/Other_Decon_Types.recordType-meta.xml
<RecordType>
    <fullName>Other_Decon_Types</fullName>
    <active>true</active>
    <description>Used for tracking all deonstructions other than those managed by the national Team</description>
    <label>Other Decon Types</label>
</RecordType>