force-app/main/default/objects/Site_Decommission__c/validationRules/DX_Start_Forecast_date.validationRule-meta.xml
<ValidationRule>
    <fullName>DX_Start_Forecast_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Permission.Regional_Managers_Deconstruction),Dish_Option_Status__c &lt;&gt; &apos;Declined/Did Not Respond&apos;,
OR(AND(ISCHANGED(DX_Start_Forecast__c),DX_Start_Forecast__c &gt; Notice_of_Decommission_Date__c),AND(ISCHANGED(DX_Complete_Forecast__c),DX_Complete_Forecast__c &gt; Notice_of_Decommission_Date__c)))</errorConditionFormula>
    <errorMessage>Please Contact Regional Manager to update the DX Start Forecast Date and DX Complete Forecast Date if it&apos;s greater than NOD Date</errorMessage>
</ValidationRule>