force-app/main/default/objects/Site_Decommission__c/validationRules/GCSiteSurveyRequiredYes.validationRule-meta.xml
<ValidationRule>
    <fullName>GCSiteSurveyRequiredYes</fullName>
    <active>true</active>
    <description>Required Fields for GC Site Survey Required</description>
    <errorConditionFormula>AND(
$User.Bypass_Automation__c = false,
$Profile.Id = &apos;2F00ef4000000GmzO&apos;,
ISPICKVAL( GC_Site_Survey_Required__c , &apos;Yes&apos;),
ISBLANK( GC_Site_Survey_Complete_Date__c )
)</errorConditionFormula>
    <errorDisplayField>GC_Site_Survey_Complete_Date__c</errorDisplayField>
    <errorMessage>GC Site Survey Required is Yes;
Please enter the GC Site Survey Complete Date</errorMessage>
</ValidationRule>