force-app/main/default/objects/Site_Decommission__c/validationRules/Reason_Code_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Code_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Reason__c ,&apos;&apos;),
	ISCHANGED(DX_Start_Forecast__c),
	NOT(ISBLANK(PRIORVALUE(DX_Start_Forecast__c))),
	DX_Start_Forecast__c &gt; PRIORVALUE(DX_Start_Forecast__c),
	NOT(ISBLANK(DX_Start_Forecast__c)))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason code drop down box that MUST be filled out whenever a DX Start Forecast date is changed.</errorMessage>
</ValidationRule>