force-app/main/default/objects/Site_Decommission__c/validationRules/StagePermittingYesPermitReceivedActual.validationRule-meta.xml
<ValidationRule>
    <fullName>StagePermittingYesPermitReceivedActual</fullName>
    <active>true</active>
    <description>Required Fields at Stage Permitting Yes Permit Received Actual Date</description>
    <errorConditionFormula>AND(
$User.Bypass_Automation__c = false,
$Profile.Id = &apos;2F00ef4000000GmzO&apos;,
ISPICKVAL(Permits_Required__c , &apos;Yes&apos;),
ISBLANK( Permit_Received_Actual_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Permit_Received_Actual_Date__c</errorDisplayField>
    <errorMessage>Permit Required is Yes;
Please enter the Permit Received Actual Date</errorMessage>
</ValidationRule>